--- a/Landscape_Or_Cityscape.ipynb
+++ b/Landscape_Or_Cityscape.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -23,24 +23,18 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import keras\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n",
-      "/home/connor/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "#keras specific imports\n",
     "from keras import Model, Input\n",
@@ -48,6 +42,7 @@
     "from keras.models import Sequential\n",
     "from keras.preprocessing import image\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.callbacks import EarlyStopping\n",
     "\n",
     "from keras.applications import VGG16,vgg16\n",
     "from keras.applications import ResNet50, resnet50\n",
@@ -56,37 +51,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def prep_for_vgg(path):\n",
-    "    img = image.load_img(path, target_size = (224, 224) )\n",
-    "    x = image.img_to_array(img)\n",
-    "    x = np.expand_dims(x, axis = 0)\n",
-    "    x = vgg16.preprocess_input(x, mode='tf')\n",
-    "    return x"
+    "from project_utils import get_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "94658560/94653016 [==============================] - 7s 0us/step\n",
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.5/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "87916544/87910968 [==============================] - 5s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "VGG = VGG16(weights = 'imagenet', include_top = False, input_shape= (224,224,3))\n",
+    "\n",
+    "RN50 = ResNet50(weights = 'imagenet', include_top = False, input_shape= (224,224,3))\n",
+    "\n",
+    "IV3 = InceptionV3(weights = 'imagenet', include_top = False, input_shape= (224,224,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "VGG = VGG16(weights = 'imagenet', include_top = False, input_shape= (224,224,3))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# This function takes in headless model (some pretrained CNN) and adds a top to it\n",
     "def create_model(base_layers):\n",
     "    for layer in base_layers.layers:\n",
     "        layer.trainable = False\n",
@@ -134,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -211,108 +228,6 @@
    "source": [
     "vgg_model.fit_generator(train_generator, epochs=8, steps_per_epoch= 10,\n",
     "                        validation_data=validation_generator,validation_steps=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import keras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'cityporn_3_7': 0, 'earthporn_3_7': 1}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_generator.class_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "citypaths = os.listdir(path='./images/test/city')\n",
-    "earthpaths = os.listdir(path='./images/test/earth')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test, y_test = [],[]\n",
-    "for path in citypaths:\n",
-    "    x = prep_for_vgg('./images/test/city/'+path)\n",
-    "    X_test.append(x.reshape(224,224,3))\n",
-    "    y_test.append(0)\n",
-    "for path in earthpaths:\n",
-    "    x = prep_for_vgg('./images/test/earth/'+path)\n",
-    "    X_test.append(x.reshape(224,224,3))\n",
-    "    y_test.append(1)\n",
-    "   \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_test, y_test = np.array(X_test), keras.utils.to_categorical(np.array(y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vgg_model.evaluate(X_test,y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['loss', 'acc']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vgg_model.metrics_names"
    ]
   },
   {
