progress and some comments

--- a/Gathering_Data.ipynb
+++ b/Gathering_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,8 +15,17 @@
     "import io\n",
     "import time\n",
     "import datetime\n",
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def get_and_save_sub_images(subreddit, date, min_votes):\n",
     "    '''saves images from the given subreddit since date (d/m/y) with >= min_votes in a folder named subreddit_[day]_month'''\n",
     "    \n",
@@ -24,7 +33,7 @@
     "    today = datetime.datetime.today()\n",
     "    month,day = today.month, today.day\n",
     "    for fol in ['train','test','validation']:\n",
-    "        folder = \"images/{}/{}_{}_{}/\".format(fol,subreddit, month, day)\n",
+    "        folder = \"images/{}/{}_{}_{}\".format(fol,subreddit, month, day)\n",
     "        os.mkdir(folder)\n",
     "    folder+='/'\n",
     "    print(\"saving {} images to {} \".format(len(urls),folder))\n",
@@ -74,9 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -107,104 +116,7 @@
       "got 2200 urls\n",
       "got 2300 urls\n",
       "got 2400 urls\n",
-      "got 2500 urls\n",
-      "got 2600 urls\n",
-      "got 2700 urls\n",
-      "got 2800 urls\n",
-      "got 2900 urls\n",
-      "got 3000 urls\n",
-      "got 3100 urls\n",
-      "got 3200 urls\n",
-      "got 3300 urls\n",
-      "got 3400 urls\n",
-      "got 3500 urls\n",
-      "got 3600 urls\n",
-      "got 3700 urls\n",
-      "got 3800 urls\n",
-      "got 3900 urls\n",
-      "got 4000 urls\n",
-      "got 4100 urls\n",
-      "got 4200 urls\n",
-      "got 4300 urls\n",
-      "got 4400 urls\n",
-      "got 4500 urls\n",
-      "got 4600 urls\n",
-      "saving 4668 images to images/validation/earthporn_3_9// \n",
-      "saved 100 images from r/earthporn\n",
-      "saved 200 images from r/earthporn\n",
-      "saved 300 images from r/earthporn\n",
-      "saved 400 images from r/earthporn\n",
-      "saved 500 images from r/earthporn\n",
-      "saved 600 images from r/earthporn\n",
-      "saved 700 images from r/earthporn\n",
-      "saved 800 images from r/earthporn\n",
-      "saved 900 images from r/earthporn\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/PIL/Image.py:2438: DecompressionBombWarning: Image size (93153600 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved 1000 images from r/earthporn\n",
-      "saved 1100 images from r/earthporn\n",
-      "saved 1200 images from r/earthporn\n",
-      "saved 1300 images from r/earthporn\n",
-      "saved 1400 images from r/earthporn\n",
-      "saved 1500 images from r/earthporn\n",
-      "saved 1600 images from r/earthporn\n",
-      "saved 1700 images from r/earthporn\n",
-      "saved 1800 images from r/earthporn\n",
-      "saved 1900 images from r/earthporn\n",
-      "saved 2000 images from r/earthporn\n",
-      "saved 2100 images from r/earthporn\n",
-      "saved 2200 images from r/earthporn\n",
-      "saved 2300 images from r/earthporn\n",
-      "saved 2400 images from r/earthporn\n",
-      "saved 2500 images from r/earthporn\n",
-      "saved 2600 images from r/earthporn\n",
-      "saved 2700 images from r/earthporn\n",
-      "saved 2800 images from r/earthporn\n",
-      "saved 2900 images from r/earthporn\n",
-      "saved 3000 images from r/earthporn\n",
-      "saved 3100 images from r/earthporn\n",
-      "saved 3200 images from r/earthporn\n",
-      "saved 3300 images from r/earthporn\n",
-      "saved 3400 images from r/earthporn\n",
-      "saved 3500 images from r/earthporn\n",
-      "saved 3600 images from r/earthporn\n",
-      "saved 3700 images from r/earthporn\n",
-      "saved 3800 images from r/earthporn\n",
-      "saved 3900 images from r/earthporn\n",
-      "saved 4000 images from r/earthporn\n",
-      "saved 4100 images from r/earthporn\n",
-      "saved 4200 images from r/earthporn\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/PIL/Image.py:2438: DecompressionBombWarning: Image size (98130452 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved 4300 images from r/earthporn\n",
-      "saved 4400 images from r/earthporn\n",
-      "saved 4500 images from r/earthporn\n",
-      "saved 4600 images from r/earthporn\n",
-      "done with /r/earthporn\n"
+      "got 2500 urls\n"
      ]
     }
    ],
@@ -218,58 +130,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "got 100 urls\n",
-      "got 200 urls\n",
-      "got 300 urls\n",
-      "got 400 urls\n",
-      "got 500 urls\n",
-      "got 600 urls\n",
-      "got 700 urls\n",
-      "got 800 urls\n",
-      "got 900 urls\n",
-      "got 1000 urls\n",
-      "got 1100 urls\n",
-      "got 1200 urls\n",
-      "got 1300 urls\n",
-      "got 1400 urls\n",
-      "saving 1408 images to images/validation/cityporn_3_9// \n",
-      "saved 100 images from r/cityporn\n",
-      "saved 200 images from r/cityporn\n",
-      "saved 300 images from r/cityporn\n",
-      "saved 400 images from r/cityporn\n",
-      "saved 500 images from r/cityporn\n",
-      "saved 600 images from r/cityporn\n",
-      "saved 700 images from r/cityporn\n",
-      "saved 800 images from r/cityporn\n",
-      "saved 900 images from r/cityporn\n",
-      "saved 1000 images from r/cityporn\n",
-      "saved 1100 images from r/cityporn\n",
-      "saved 1200 images from r/cityporn\n",
-      "saved 1300 images from r/cityporn\n",
-      "done with /r/cityporn\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "get_and_save_sub_images('cityporn','01/01/2017',100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4000, 6000, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.misc import imread\n",
+    "print (imread('images/train/earthporn_3_10/image4581.jpg').shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6060"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "month,day = 3, 10\n",
+    "paths = []\n",
+    "for fol in ['train', 'test', 'validation']:\n",
+    "    for subreddit in ['earthporn', 'cityporn']:\n",
+    "        folder = \"images/{}/{}_{}_{}\".format(fol,subreddit, month, day)\n",
+    "        imgs = os.listdir(folder)\n",
+    "        imgs = [folder+'/'+i for i in imgs]\n",
+    "        paths.extend(imgs)\n",
+    "        \n",
+    "len(paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "broken = []\n",
+    "for f in paths:\n",
+    "    try:\n",
+    "        imread(f)\n",
+    "    except:\n",
+    "        broken.append(path)\n",
+    "        print(\"broken file\", f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "for f in broken:\n",
+    "    os.remove(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(broken)"
    ]
   },
   {
